# explain_behaviour

./: .gitignore  README.md  pyproject.toml
configs/: README.md
configs/analysis/: whisker.yaml  whisker_classification.yaml  whisker_reaction_time.yaml
explain_behaviour/config/: analysis_config.py
explain_behaviour/helpers/: helpers.py  plotting.py
explain_behaviour/models/: behavioural_analysis_GBM.py  binary_classification.py
explain_behaviour/preprocessing/: trial_features.py
scripts/: analyze_behavior.py  analyze_feature_correlations.py  context_task_GBM.py  load_bhv_data.py
