[tool.poetry]
name = "explain-behaviour"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
shap = "^0.45.0"
click = "^8.1.7"
optuna = "^3.6.0"
imbalanced-learn = "^0.12.0"
optuna-integration = "^3.6.0"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
